feature: Game start command functions fully